--- a/style.css
+++ b/style.css
@@ -15,9 +15,7 @@ body{
     align-items: center;
     flex-direction: column;
     margin-top: 100px;
-    justify-content: flex-start;
-    
-    
+    justify-content: flex-start; 
 }
 
 
@@ -40,7 +38,6 @@ nav{
     display:flex;
     justify-content: space-between;
     align-items: center;
-    cursor:pointer;
     position: fixed;
     top: 0;
     width: 79.5%;
@@ -58,7 +55,6 @@ nav{
   margin:22px 20px;
   border-radius: 10px;
   display:flex;
-  cursor:pointer;
   width: 79.5%;
   color:aliceblue;
   font-size:22px;
@@ -66,7 +62,6 @@ nav{
   font-family: "Roboto", serif;
   justify-content: space-between;
   align-items: center;
-  cursor:pointer;
   margin-top:0px;
   margin-left:7px;
   margin-right:7px;
@@ -186,6 +181,10 @@ nav{
     justify-content: center;
     align-items: center;
     gap:20px;
+  }
+
+  span{
+    cursor:pointer;
   }
 
  
